update nav jumbotron dan subhead

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -27,3 +27,32 @@
   align-items: center;
   margin-left: auto;
 }
+
+/* jumbotron css */
+.bg-jumbotron {
+  background-image: url("../assets/jumbotron.png");
+  background-size: cover;
+  background-position: inherit;
+  background-repeat: no-repeat;
+}
+.jumbotron-image {
+  max-width: 100%;
+  height: auto;
+}
+
+/* subhead css */
+.subhead-image-wrapper {
+  width: 100%;
+  margin-top: 20px;
+  text-align: center;
+}
+
+.arrow-icon {
+  width: 20px;
+  height: 20px;
+  transition: transform 0.3s ease;
+}
+
+.arrow-icon:hover {
+  transform: translateX(5px); /* Efek hover pada ikon */
+}
